# spire-lens-mcp

./: .gitignore  AGENTS.md  AUTHORS.md  McpMod.Actions.cs  McpMod.Catalog.cs  McpMod.DevActions.cs  McpMod.Formatting.cs  McpMod.Helpers.cs  McpMod.MultiplayerActions.cs  McpMod.MultiplayerState.cs  McpMod.SettingsUI.cs  McpMod.StateBuilder.cs  McpMod.cs  README.md  SpireLensMcp.csproj  SpireLensMcp.sln  SpireLensMcpBridge.sln  build.ps1  mod_manifest.json
.github/workflows/: dotnet-format.yml  python-quality.yml
docs/: raw-full.md
mcp/: README.md  pyproject.toml  server.py  test_auth.py  test_lookup_disambiguation.py
mcp/base_saves/: .gitattributes  base_defect.save  base_ironclad.save  base_necrobinder.save  base_regent.save  base_silent.save
